# flask_project

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
blog/: admin.py  app.py  blog.db  config.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/article/: views.py
blog/forms/: user.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
blog/permissions/: user.py
blog/schemas/: article.py  author.py  user.py
blog/templates/: base.html  css_include.html  index.html  navbar.html
blog/templates/admin/: index.html
blog/templates/article/: create.html  detail.html  list.html
blog/templates/articles/: details.html  list.html
blog/templates/auth/: login.html  register.html
blog/templates/author/: list.html
blog/templates/user/: detail.html  list.html
blog/templates/users/: details.html  list.html
blog/user/: views.py
blog/views/: article.py  auth.py  author.py  user.py
migrations/versions/: 007380a8f47a_update_tag.py  030d9b7a3bef_update_article.py  9007cb7be4d0_update_tag_article.py  94e1e4e2bb21_first_and_last_name.py  99ce71ebebd5_update_user_model.py  d725dc0ac082_update_author.py  e1b43436d418_update_article.py
