[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "3.11.1"
flask = "2.2.2"
flask-sqlalchemy = "3.0.2"
flask-migrate = "4.0.1"
psycopg2 = "2.9.5"
flask-login = "0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
